# mini-monitor

./: .gitignore  CMakeLists.txt  build.sh  config.env  joinFiles.sh  tmp.txt
db/: init.sql
src/: db_test.c  db_test.cpp  main.cpp
src/app/: Application.cpp  Application.hpp  application.cpp  application.hpp
src/database/: Database.cpp  Database.hpp
